# dbt-lambda

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  samconfig.yaml  template.yaml
dbt_lambda/: app.py  cli.py  config.py  git.py  main.py
example/transform/: app.py  docs.py
example/transform-layer/: requirements.txt
src/: git.py  main.py
src/dbt_lambda/: app.py  cli.py  config.py  docs.py  git.py  main.py  secrets.py
tests/: conftest.py  test_dbt_lambda.py
tests/dbt-project/models/testrun/: test_model.sql
tests/dbt-project/profiles/: profiles.yml
tests/test_dbt_lambda/: test_git.py  test_main.py
tests/test_dbt_lambda/dbt-project/: dbt_project.yml
tests/test_dbt_lambda/dbt-project/tests/: warning_test.sql
