[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-lambda"
authors = [
    { name = "Christian Schäfer", email = "christian.schaefer@tatenmitdaten.com" },
]
description = "Package for running dbt on AWS Lambda"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "dbt-snowflake==1.8.4",
    "boto3-stubs[s3]",
]

[project.optional-dependencies]
dev = [
    "boto3",
    "typer",
    "dbt-duckdb",
    "pytest",
    "moto[s3,codecommit]",
    "types-requests",
    "types-PyYAML",
    "mypy",
    "flake8",
]
cli = [
    "boto3",
    "typer",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.distutils.egg_info]
egg_base = "."

[project.scripts]
dbt-lambda = "dbt_lambda.cli:cli"